amitai added these

--- a/gilor_server/finance_tracker/templates/login/login.html
+++ b/gilor_server/finance_tracker/templates/login/login.html
@@ -77,7 +77,7 @@
 
     <script>
         // Configuration and Global Variables
-        const API_BASE_URL = 'http://127.0.0.1:8000/api/'; // Your Django API base URL
+        const API_BASE_URL = 'http://127.0.0.1:8000/finance_tracker/'; // Your Django API base URL
 
         // DOM Elements
         const loadingIndicator = document.getElementById('loadingIndicator');
@@ -142,7 +142,7 @@
             const csrftoken = getCookie('csrftoken'); // Get CSRF token
 
             try {
-                const response = await fetch(`${API_BASE_URL}auth/token/`, {
+                const response = await fetch(`api/auth/token/`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
