--- a/gilor_server/amitai/templates/snake_game/snake.html
+++ b/gilor_server/amitai/templates/snake_game/snake.html
@@ -114,7 +114,7 @@
         let score = 0;
         let foodEaten = 0; // New variable
         let gameInterval;
-        let gameSpeed = 150;
+        let gameSpeed = 200;
         let changingDirection = false;
         let startTime; // New variable to track game start time
 
@@ -161,10 +161,19 @@
         function advanceSnake() {
             const head = {x: snake[0].x + dx, y: snake[0].y + dy};
 
-            if (head.x < 0) head.x = canvas.width / gridSize - 1;
-            if (head.x >= canvas.width / gridSize) head.x = 0;
-            if (head.y < 0) head.y = canvas.height / gridSize - 1;
-            if (head.y >= canvas.height / gridSize) head.y = 0;
+            // If snake hits the wall, end the game immediately
+                if (
+        head.x < 0 || head.x >= canvas.width / gridSize ||
+        head.y < 0 || head.y >= canvas.height / gridSize
+        ) {
+    clearInterval(gameInterval);
+    const endTime = Date.now();
+    const gameDurationMs = endTime - startTime;
+
+    sendGameRecordToAPI(score, foodEaten, gameDurationMs);
+    return;
+}
+
 
             snake.unshift(head);
 
@@ -195,7 +204,7 @@
                 playerName = "Anonymous"; // Default name if none entered
             }
 
-            fetch('/api/save_score', { // Updated API endpoint URL
+            fetch('/amitai/save_score', { // Updated API endpoint URL
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
