--- a/gilor_server/static/madlibs_game.css
+++ b/gilor_server/static/madlibs_game.css
@@ -1,4 +1,4 @@
-body {
+ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     display: flex;
@@ -77,5 +77,6 @@ button:hover {
     padding: 20px;
     border-radius: 5px;
     text-align: left;
-    white-space: pre-wrap; /* Preserves whitespace and line breaks */
+    white-space: pre-wrap;
 }
+
