--- a/gilor_server/static/flappy_bird.css
+++ b/gilor_server/static/flappy_bird.css
@@ -14,6 +14,22 @@ body {
     display: block;
     border: 2px solid #000;
   }
+  .reset-button {
+    position: absolute;
+    top: 60px;
+    padding: 10px 20px;
+    font-size: 18px;
+    color: #fff;
+    background-color: #ff5722;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-shadow: 1px 1px 2px #000;
+  }
+
+  .reset-button:hover {
+    background-color: #e64a19;
+  }
   
   .score {
     position: absolute;
@@ -22,4 +38,3 @@ body {
     color: #fff;
     text-shadow: 2px 2px 4px #000;
   }
-  
