hello_amitai-the-kinggi

--- a/gilor_server/amitai/templates/adding_data/adding_data.html
+++ b/gilor_server/amitai/templates/adding_data/adding_data.html
@@ -162,7 +162,7 @@
 
     <script>
         // === API Configuration ===
-        const API_BASE_URL = 'http://127.0.0.1:8000/amitai';
+        const api_base_url = 'amitai';
         const CREATE_DATA_ENDPOINT = `${API_BASE_URL}/create_data`;
         const GET_DATA_ENDPOINT = `${API_BASE_URL}/get_all_templates`; // Assumed endpoint for GET requests
         const CLEAR_DATA_ENDPOINT = `${API_BASE_URL}/delete_all_data`; // Assumed endpoint for DELETE requests
