--- a/gilor_server/amitai/templates/add_games/add_games.html
+++ b/gilor_server/amitai/templates/add_games/add_games.html
@@ -7,7 +7,6 @@
     <title>Add Games</title>
     <link rel="stylesheet" href="{% static 'add_games.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="{% static 'add_games.js' %}"></script>
 </head>
 <body class="bg-gray-900 text-gray-100 p-6">
     <div class="container mx-auto max-w-6xl">
@@ -19,7 +18,7 @@
             </div>
             <div>
                 <label for="gameLink" class="block text-sm font-medium text-gray-300">add the end game link</label>
-                <textarea placeholder="e.g. amitai/add_games" type="text" id="gameLink" name="gamLink" required class="mt-1 block w-full p-2 bg-gray-800 border border-gray-700 rounded-md focus:ring-blue-500 focus:border-blue-500"></textarea>
+                <input placeholder="e.g. amitai/add_games" type="text" id="gameLink" name="gamLink" required class="mt-1 block w-full p-2 bg-gray-800 border border-gray-700 rounded-md focus:ring-blue-500 focus:border-blue-500">
             </div>
             <div>
                 <label for="gameImage" class="block text-sm font-medium text-gray-300">Game Image URL</label>
@@ -28,3 +27,4 @@
             <button id="submit" type="submit" class="w-full py-2 px-4 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-md">Add Game</button>
         </form>
     </div>
+    <script src="{% static 'add_games.js' %}"></script>
